--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -19,7 +19,7 @@
       <input type="hidden" name="competition" value="{{competition['name']}}" />
       <label for="places">How many places?</label
       ><input type="number" name="places" id="" />
-      <button type="submit">Book</button>
+      <button type="submit" name="book">Book</button>
     </form>
 
     {%endwith%}
