--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <form action="showSummary" method="post">
       <label for="email">Email:</label>
       <input type="email" name="email" id="" />
-      <button type="submit">Submit</button>
+      <button type="submit" id="submit">Submit</button>
       {% if error %}
       <p class="error" style="color: red">Please enter a valid email address</p>
       {% endif %}
